src/components/NewGroup/newgroup.css
.group-friends-option {
    /* border:2px solid blue; */
    overflow-y: hidden;
}

/* .group-friends-option  select{
   
} */


.group-friends-option .initial {
    transition: 1s;
    border:2px solid black;
    border-radius: 10px;
    height: 10rem;
    font-size: 24px;
    margin-top: 10px;
    width: 60%;
    position: relative;
    left: 20%;
    
}

.group-friends-option .secondary {
    transition: 1s;
    border:2px solid black;
    border-radius: 10px;
    height: 3rem;
    font-size: 24px;
    margin-top: 10px;
    width: 60%;
    position: relative;
    left: 20%;
    
}

.newGroupInput{
    background-color:inherit;
    height:280px;
    border-bottom:solid black 2px;
    z-index:10;
    
}

.friendsDiv{
    margin-top:300px;

    
}

.singleFriendDiv{
    display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: baseline;
    align-content: center;
    /* border:solid black 1px; */
    /* margin:0 10px; */
    /* padding-bottom:10px; */
    /* margin-bottom:10px; */
    /* border-bottom:solid black 2px; */
    font-family: 'Dosis';
    font-weight:bold;
    position: relative;
    margin:0 auto;
    width: 100%;
    /* padding-bottom:5px; */
    /* margin-bottom:10px; */
    /* margin-right:10px; */
    transition: all 5s;


}

.leftContainer{
    overflow-y: visible;
}

.singleFriendDiv button{
    width:80px;
}

.singleFriendDiv *{
    margin:auto 10px;
    width: 100%;
}

.friendsDiv img{
    /* margin-top:20px; */
    border-radius:50%;
    width:60px;
}

.singleFriendDiv .border{
    position: absolute;
    border:solid rgb(3, 235, 3) 3px;
    width:98.5vw;
    margin-left:0;
    padding:40px 0;
    /* padding:10px; */
    /* margin:-5px; */

}

.newGroupInput{
    width: 100%;
}

.newEvent-input {
    border: 2px solid black;
    width: 100%;
    height: 3rem;
    border-radius: 10px;
    font-size: 24px;
    margin-top: 10px;
}

